# know-hub

./: README.md
backend/: .cursorrules  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  DOCKER.md  LICENSE  README.md  docker-compose.run.yml  docker-compose.yml  docker-compose.yml.tmp  dockerfile  install_and_start.ps1  install_and_start.sh  install_docker.ps1  install_docker.sh  morphik-cloud.toml  morphik-local.toml  morphik.docker.toml  morphik.toml  ollama-entrypoint.sh  pyproject.toml  running_locally.md  start-dev.sh  start-morphik.sh  start_server.py  switch-mode.sh
backend/.github/workflows/: docker-build.yml  docker-publish.yml  gitleaks.yml
backend/core/: api.py  app_factory.py  auth_utils.py  config.py  dependencies.py  limits_utils.py  logging_config.py  services_init.py
backend/core/completion/: litellm_completion.py
backend/core/database/: metadata_filters.py  models.py  postgres_database.py  serializers.py  user_limits_db.py
backend/core/embedding/: colpali_api_embedding_model.py  colpali_embedding_model.py  litellm_embedding.py
backend/core/middleware/: profiling.py
backend/core/models/: apps.py  auth.py  chat.py  completion.py  documents.py  folders.py  model_config.py  prompts.py  request.py  responses.py  summary.py  tiers.py  user_limits.py  v2.py
backend/core/parser/: docling_v2.py  morphik_parser.py  xml_chunker.py
backend/core/routes/: documents.py  folders.py  health.py  ingest.py  logs.py  models.py  usage.py  utils.py  v2.py
backend/core/services/: document_service.py  heartbeat.py  ingestion_service.py  log_uploader.py  morphik_on_the_fly_structured_output.py  neon_client.py  telemetry.py  telemetry_events.py  user_service.py  v2_document_service.py
backend/core/storage/: base_storage.py  local_storage.py  s3_storage.py  utils_file_extensions.py
backend/core/utils/: fast_ops.py  folder_utils.py  storage_usage.py  telemetry_signature.py  typed_metadata.py
backend/core/vector_store/: base_vector_store.py  chunk_v2_store.py  dual_multivector_store.py  fast_multivector_store.py  multi_vector_store.py  pgvector_store.py  utils.py
backend/core/workers/: ingestion_worker.py
backend/docs/: telemetry.md
backend/evaluations/custom_eval/: README.md  analyze_eval.py  base_eval.py  evaluate.py  morphik_answers.csv  morphik_eval.py  morphik_evaluation.csv  openai_answers.csv  openai_eval.py  openai_evaluation.csv  questions_and_answers.csv
backend/fde/: pyproject.toml
backend/morphik_rust/: Cargo.toml  pyproject.toml
backend/morphik_rust/src/: base64_ops.rs  binary_ops.rs  chunking.rs  lib.rs  text_utils.rs
backend/scripts/: check_completeness.py  clear_tables.sh  delete_namespace.py  export_multivector_chunks_resumable.py  hosted_service_sanity_check.py  migrate_postgres_to_turbopuffer.py  sanity_test.sh  sanity_uri_tests.sh  scrub_legacy_document_metadata.py  test_file_ingest_typed_metadata.sh  test_metadata_filters.sh  v2_api_sanity.sh
backend/sdks/python/: CHANGELOG.md  PUBLISH.md  README.md  pyproject.toml
backend/utils/: env_loader.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/connections/: page.tsx
frontend/app/documents/: loading.tsx  page.tsx
frontend/app/logs/: page.tsx
frontend/app/pdf/: page.tsx
frontend/app/search/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: ConnectionInput.tsx  MorphikUI.tsx  dynamic-site-header.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  sidebar-base.tsx  sidebar-container.tsx  sidebar-stateful.tsx  sidebar.tsx  site-header.tsx  theme-toggle.tsx  types.ts
frontend/components/chat/: ChatMessages.tsx  ChatSection.tsx  ChatSidebar.tsx  chat-context.tsx  chatModelUtils.ts  icons.tsx  index.ts  useChatModelSelector.ts
frontend/components/connectors/: ConnectorCard.tsx  ConnectorList.tsx  FileBrowser.tsx
frontend/components/documents/: DocumentDetail.tsx  DocumentList.tsx  DocumentsHeader.tsx  DocumentsSection.tsx  DocumentsSectionWithHeader.tsx  DocumentsWithHeader.tsx  UploadDialog.tsx
frontend/components/logs/: LogsSection.tsx
frontend/components/pdf/: PDFViewer.tsx
frontend/components/search/: SearchResultCard.tsx  SearchResultCardCarousel.tsx  SearchSection.tsx
frontend/contexts/: header-context.tsx  morphik-context.tsx
frontend/hooks/: useChatSessions.ts  useConnectionManager.ts  useDocuments.ts  useDocumentsHeader.tsx  useFolders.ts  useLogs.ts  useModels.ts  useMorphikChat.ts  useUnorganizedDocuments.ts
frontend/lib/: api-client.ts  connection-utils.ts  connectorsApi.ts  folderTree.ts  log.ts  navigation-utils.ts  utils.ts
(+40 files in other folders)
