[package]
name = "morphik_rust"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust extensions for Morphik"
license = "MIT"

[lib]
name = "morphik_rust"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Fast base64 with SIMD support
base64 = "0.22"

# Rayon for parallel processing
rayon = "1.10"

# NumPy interop for binary quantization
numpy = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
